--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header>
   <div class="container">
     <nav>
-      <a href="/" class="logo">{{ .Site.Title | default "indietool" }}</a>
+      <a href="/" class="logo">indietools</a>
       <ul class="nav-links">
         {{ range .Site.Menus.main }}
         <li><a href="{{ .URL }}">{{ .Name }}</a></li>
